--- a/README.rdoc
+++ b/README.rdoc
@@ -2,7 +2,7 @@
 
 Rails version 3.0.0.beta4 is VERY experimental, use it at your own risk. Some bugs can be found using rvm 1.9.2-head. 
 
-More stable environment should be ruby 1.8.7 (2010-01-10 patchlevel 249) [i486-linux]
+More stable environment should be ruby 1.8.7 (2010-01-10 patchlevel 249)
 
 Feel free to fork the project, add your own patches  and send a pull request.
 
