--- a/README.rdoc
+++ b/README.rdoc
@@ -1,6 +1,6 @@
 = Warning 
 
-Rails version 3.0.0.beta4 is VERY experimental, use it at your own risk. Some bugs can be found using rvm 1.9.2-head. 
+Rails 3.0 Release candidate, is usable but still experimental. Some bugs can be found using rvm 1.9.2-head. 
 
 More stable environment should be ruby 1.8.7 (2010-01-10 patchlevel 249)
 
@@ -8,7 +8,7 @@ Feel free to fork the project, add your own patches  and send a pull request.
 
 = Overview
 
-Rails 3 out of the box application templates (R3OOTB), actually runs {Rails version 3.0.0.beta4 }[http://github.com/rails/rails/tree/v3.0.0.beta4] and is packed up with fine jewels:
+Rails 3 out of the box application templates (R3OOTB), actually runs {Rails version 3.0.0.rc }[http://github.com/rails/rails/tree/v3.0.0_RC] and is packed up with fine jewels:
 
 {devise}[http://github.com/plataformatec/devise] authentication 
 
