--- a/README.rdoc
+++ b/README.rdoc
@@ -1,18 +1,10 @@
-= Warning 
-
-Rails 3.0 Release candidate, is usable but still experimental. Some bugs can be found using rvm 1.9.2-head. 
-
-More stable environment should be ruby 1.8.7 (2010-01-10 patchlevel 249)
-
-Feel free to fork the project, add your own patches  and send a pull request.
-
 = Overview
 
-Rails 3 out of the box application templates (R3OOTB), actually runs {Rails version 3.0.0.rc }[http://github.com/rails/rails/tree/v3.0.0_RC] and is packed up with fine jewels:
+Rails 3 out of the box application templates (R3OOTB), actually runs {Rails version 3.0.0.rc }[http://github.com/rails/rails/tree/v3.0.0_RC],
 
 {devise}[http://github.com/plataformatec/devise] authentication 
 
-{blueprint css}[http://github.com/joshuaclayton/blueprint-css] layout, built with {Boks}[http://toki-woki.net/p/Boks/help.html]
+and {blueprint css}[http://github.com/joshuaclayton/blueprint-css] layout, built with {Boks}[http://toki-woki.net/p/Boks/help.html]
 
 == Usage 
 
